INN-158: Add .env.example
- Created .env.example with all configuration keys and detailed comments
- Added LOG_LEVEL validation (error|warn|info|debug) to src/config.js
- All keys documented with defaults and behavior:
  * Required: LINEAR_API_KEY, ASSIGNEE_ID
  * Polling: POLL_INTERVAL_SEC, TMUX_PREFIX, LINEAR_OPEN_STATES, LINEAR_PAGE_LIMIT
  * Health & recovery: SESSION_HEALTH_MODE, SESSION_KILL_ON_UNHEALTHY, SESSION_RESTART_COOLDOWN_SEC
  * Logging: LOG_LEVEL

Definition of done verified:
- ✅ .env.example matches PRD (includes all required and optional vars)
- ✅ No secrets in .env.example (only placeholder values)
- ✅ Comments document defaults and behavior
- ✅ Service starts successfully with .env.example
- ✅ Config summary printed with secrets masked
- ✅ Missing required vars fail fast with actionable message
- ✅ Invalid values validated with clear error messages

Note: README reference to .env.example will be added in future issue (ISSUE-020)

--- a/.env.example
+++ b/.env.example
@@ -1,35 +1,68 @@
-# pi-linear-service Configuration
-# Copy this file to .env and fill in your values
+# pi-linear-service Environment Configuration
+# Copy this file to .env and fill in the required values
 
-# Required: Linear API token (generate at https://linear.app/settings/api)
-LINEAR_API_KEY=your_linear_api_key_here
+# -----------------------------------------------------------------------------
+# REQUIRED CONFIGURATION
+# -----------------------------------------------------------------------------
 
-# Required: Your Linear user ID (find in profile settings)
-ASSIGNEE_ID=your_user_id_here
+# Linear API authentication key
+# Get from: https://linear.app/settings/api
+LINEAR_API_KEY=lin_api_your_api_key_here
 
-# Optional: Polling interval in seconds (default: 300 = 5 minutes)
+# Linear user ID to filter issues by assignee
+# Get from: Linear CLI (linear issue view) or Linear UI user settings
+ASSIGNEE_ID=user_id_here
+
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - Polling Behavior
+# -----------------------------------------------------------------------------
+
+# Polling interval in seconds (default: 300, minimum: 5)
+# How often to check Linear API for assigned issues
 POLL_INTERVAL_SEC=300
 
-# Optional: Prefix for tmux sessions created by this service (default: pi_project_)
-TMUX_PREFIX=pi_project_
-
-# Optional: Comma-separated list of Linear state names to consider "open" (default: Todo,In Progress)
-LINEAR_OPEN_STATES=Todo,In Progress
-
-# Optional: Maximum number of issues to fetch per poll (default: 100)
+# Maximum number of issues to fetch per poll (default: 100, minimum: 1)
+# If this limit is reached, a warning is logged about possible truncation
 LINEAR_PAGE_LIMIT=100
 
-# Optional: Health check mode (default: basic)
-# Options: none (disabled), basic (checks for dead panes)
+# Comma-separated list of Linear issue states to consider "open" (default: Todo,In Progress)
+# Only issues in these states will trigger tmux session creation
+LINEAR_OPEN_STATES=Todo,In Progress
+
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - tmux Session Management
+# -----------------------------------------------------------------------------
+
+# Prefix for tmux sessions created by this service (default: pi_project_)
+# Sessions with this prefix are considered "owned" by this service for health checks
+# Format: ${TMUX_PREFIX}${projectId}
+TMUX_PREFIX=pi_project_
+
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - Health & Recovery
+# -----------------------------------------------------------------------------
+
+# Health check mode (default: basic, allowed: none|basic)
+# - none: No health checks performed
+# - basic: Check if session has live panes; exited pane = unhealthy
 SESSION_HEALTH_MODE=basic
 
-# Optional: Kill unhealthy sessions (default: false for safety)
-# If true, sessions owned by this service will be killed if unhealthy
+# Kill unhealthy sessions (default: false)
+# If true, unhealthy sessions owned by this service will be killed
+# Safety: disabled by default to prevent unexpected session termination
 SESSION_KILL_ON_UNHEALTHY=false
 
-# Optional: Cooldown period in seconds before killing the same session again (default: 60)
+# Cooldown period in seconds before re-killing a session (default: 60, minimum: 0)
+# Prevents kill/restart loops for sessions that fail to start properly
 SESSION_RESTART_COOLDOWN_SEC=60
 
-# Optional: Log level (default: info)
-# Options: debug, info, warn, error
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - Logging
+# -----------------------------------------------------------------------------
+
+# Log level (default: info, allowed: error|warn|info|debug)
+# - error: Only errors
+# - warn: Errors and warnings
+# - info: Normal operational messages (default)
+# - debug: Verbose output for troubleshooting
 LOG_LEVEL=info
