Make session command configurable with placeholders
- Added SESSION_COMMAND_TEMPLATE configuration option
- Default: 'pi -p "You are working on project: ${projectName} list issues and choose one to work on, if an issue is already in progress - continue"'
- Available placeholders:
  - ${projectName} - Name of the project
  - ${projectId} - ID of the project
  - ${sessionId} - Full session name
  - ${issueCount} - Number of qualifying issues
- Updated ensureSession() to accept project data and command template
- Added replacePlaceholders() function to substitute placeholders
- Updated createSessionsForProjects() to pass project data and template
- Updated .env.example with SESSION_COMMAND_TEMPLATE documentation
- Updated printConfigSummary() to show session command template
- Updated FUNCTIONALITY.md with new workflow explanation

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,16 @@ LINEAR_OPEN_STATES=Todo,In Progress
 # Format: ${TMUX_PREFIX}${projectId}
 TMUX_PREFIX=pi_project_
 
+# Command template for sessions (default: pi -p "You are working on project: ${projectName} list issues and choose one to work on, if an issue is already in progress - continue")
+# Available placeholders:
+#   ${projectName}  - Name of the project from Linear
+#   ${projectId}    - ID of the project (e.g., ABC-123)
+#   ${sessionId}    - Full session name (e.g., pi_project_ABC-123)
+#   ${issueCount}   - Number of qualifying issues in the project
+# The command runs in non-interactive mode with -p flag, so pi processes the prompt and exits.
+# This allows the service to process work items one at a time and create new sessions as needed.
+SESSION_COMMAND_TEMPLATE=pi -p "You are working on project: ${projectName} list issues and choose one to work on, if an issue is already in progress - continue"
+
 # -----------------------------------------------------------------------------
 # OPTIONAL CONFIGURATION - Health & Recovery
 # -----------------------------------------------------------------------------
