Complete INN-177: Add dry-run mode

--- a/.env.example
+++ b/.env.example
@@ -76,3 +76,13 @@ SESSION_RESTART_COOLDOWN_SEC=60
 # - info: Normal operational messages (default)
 # - debug: Verbose output for troubleshooting
 LOG_LEVEL=info
+
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - Dry-run Mode
+# -----------------------------------------------------------------------------
+
+# Dry-run mode (default: false)
+# If true, the service logs intended tmux actions without executing them
+# Useful for first-time setup to verify configuration before making actual changes
+# Linear API calls still work normally in dry-run mode
+DRY_RUN=false
