Update docs for RPC mode configuration

--- a/.env.example
+++ b/.env.example
@@ -30,7 +30,38 @@ LINEAR_PAGE_LIMIT=100
 LINEAR_OPEN_STATES=Todo,In Progress
 
 # -----------------------------------------------------------------------------
-# OPTIONAL CONFIGURATION - tmux Session Management
+# OPTIONAL CONFIGURATION - Project Filtering
+# -----------------------------------------------------------------------------
+
+# Comma-separated whitelist of Linear projects to process.
+# Entries can be project *names* or project *ids*.
+PROJECT_FILTER=
+
+# Comma-separated blacklist of Linear projects to ignore.
+# Entries can be project *names* or project *ids*.
+PROJECT_BLACKLIST=
+
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - RPC Mode (DEFAULT)
+# -----------------------------------------------------------------------------
+
+# Select mode: rpc (default) or legacy
+PI_LINEAR_MODE=rpc
+
+# Abort + restart RPC calls after this timeout (default: 120000)
+RPC_TIMEOUT_MS=120000
+
+# Base directory containing your cloned repos (e.g. ~/dvl)
+# If set, pi will be spawned with cwd=<RPC_WORKSPACE_ROOT>/<LinearProjectName> when possible.
+RPC_WORKSPACE_ROOT=
+
+# Pass provider/model to pi (optional)
+# Example: pi --provider cerebras --model zai-glm-4.7
+RPC_PROVIDER=
+RPC_MODEL=
+
+# -----------------------------------------------------------------------------
+# OPTIONAL CONFIGURATION - Legacy Session Management (ONLY IF PI_LINEAR_MODE=legacy)
 # -----------------------------------------------------------------------------
 
 # Prefix for tmux sessions created by this service (default: pi_project_)
@@ -38,14 +69,7 @@ LINEAR_OPEN_STATES=Todo,In Progress
 # Format: ${TMUX_PREFIX}${projectId}
 TMUX_PREFIX=pi_project_
 
-# Command template for sessions (default: pi -p "You are working on project: ${projectName} list issues and choose one to work on, if an issue is already in progress - continue")
-# Available placeholders:
-#   ${projectName}  - Name of the project from Linear
-#   ${projectId}    - ID of the project (e.g., ABC-123)
-#   ${sessionId}    - Full session name (e.g., pi_project_ABC-123)
-#   ${issueCount}   - Number of qualifying issues in the project
-# The command runs in non-interactive mode with -p flag, so pi processes the prompt and exits.
-# This allows the service to process work items one at a time and create new sessions as needed.
+# Command template for sessions (legacy mode)
 SESSION_COMMAND_TEMPLATE=pi -p "You are working on project: ${projectName} list issues and choose one to work on, if an issue is already in progress - continue"
 
 # -----------------------------------------------------------------------------
