--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "postinstall": "node bin/postinstall.js",
-    "test": "node test-config-mode-validation.js && node test-linear-execute-query.js && node test-pi-rpc-client.js && node test-service-cli.js && node test-session-ownership.js && node test-session-command-template.js && node test-tmux-runner.js"
+    "test": "node test-config-mode-validation.js && node test-linear-execute-query.js && node test-pi-rpc-client.js && node test-service-cli.js && node test-daemon-control.js && node test-poller-scope.js && node test-rpc-repo-mapping.js && node test-settings-migration.js && node test-session-ownership.js && node test-session-command-template.js && node test-tmux-runner.js"
   },
   "keywords": [
     "linear",
