--- a/pi-linear.service
+++ b/pi-linear.service
@@ -7,7 +7,8 @@ Type=simple
 Restart=on-failure
 RestartSec=5s
 WorkingDirectory=/home/afi/dvl/pi-linear-service
-EnvironmentFile=/home/afi/dvl/pi-linear-service/.env
+# Use the permanent .env location that survives extension reinstalls
+EnvironmentFile=/home/afi/.pi/agent/extensions/pi-linear-service/.env
 # IMPORTANT: Update this path to your Node.js installation
 # Run: which node
 # Examples:
