Migrate to Linear TypeScript SDK
- Replace raw GraphQL implementation with @linear/sdk
- Add src/linear-client.js with SDK client factory
- Refactor all functions in src/linear.js to use SDK client
- Update src/poller.js to create client and pass to functions
- Update extensions/pi-linear-service.js for SDK-based API calls
- Add test-linear-sdk.js with 18 comprehensive tests
- Update test-extension-commands.js to use mock SDK client
- Remove old test-linear-execute-query.js (kept as .old)
- Move old PLAN/TODO to finished/ directory
- Add AGENTS.md note about not running service without timeout

Benefits:
- Type-safe API interactions
- No manual GraphQL query strings
- SDK handles pagination, error types
- Easier to add new Linear functionality

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "start": "node index.js",
     "dev": "node --watch index.js",
     "postinstall": "node bin/postinstall.js",
-    "test": "node test-package-manifest.js && node test-pi-install-smoke.js && node test-config-mode-validation.js && node test-linear-execute-query.js && node test-pi-rpc-client.js && node test-service-cli.js && node test-daemon-control.js && node test-extension-commands.js && node test-poller-scope.js && node test-rpc-repo-mapping.js && node test-settings-migration.js && node test-session-ownership.js && node test-session-command-template.js && node test-tmux-runner.js"
+    "test": "node test-package-manifest.js && node test-pi-install-smoke.js && node test-config-mode-validation.js && node test-linear-sdk.js && node test-pi-rpc-client.js && node test-service-cli.js && node test-daemon-control.js && node test-extension-commands.js && node test-poller-scope.js && node test-rpc-repo-mapping.js && node test-settings-migration.js && node test-session-ownership.js && node test-session-command-template.js && node test-tmux-runner.js"
   },
   "keywords": [
     "linear",
@@ -45,6 +45,7 @@
   "license": "MIT",
   "author": "",
   "dependencies": {
+    "@linear/sdk": "^75.0.0",
     "dotenv": "^16.4.5"
   }
 }
